--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "liri-node-app",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/dbilderback/liri-node-app/issues"
   },
-  "homepage": "https://github.com/dbilderback/liri-node-app#readme"
+  "homepage": "https://github.com/dbilderback/liri-node-app#readme",
+  "dependencies": {
+    "dotenv": "^5.0.0",
+    "express": "^4.16.2",
+    "node-spotify-api": "^1.0.7",
+    "omdb": "^0.8.0",
+    "request": "^2.83.0",
+    "spotify": "^0.3.0",
+    "twitter": "^1.7.1"
+  },
+  "devDependencies": {},
+  "description": ""
 }
